# silverbee

./: .gitignore  CMakeLists.txt  Jenkinsfile  silverbee.hh.in  sonar-project.properties
.circleci/: config.yml
src/: CMakeLists.txt  alarmsettings.cxx  alarmsettings.hh  alarmsettingswindow.cxx  alarmsettingswindow.hh  background.cxx  background.hh  mainwindow.cxx  mainwindow.hh  silverbee.cxx  sound.cxx  sound.hh
src/state/: abstractstate.hh  alarmcontext.cxx  alarmcontext.hh  armed.cxx  armed.hh  snoozing.cxx  snoozing.hh  sounding.cxx  sounding.hh  state_exception.hh
systemd/: silverbee.service
